cluster/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "5.30.0"
    }
    kubectl = {
      source  = "gavinbunney/kubectl"
      version = ">= 1.7.0"
    }
  }
}

provider "aws" {
  region = "ap-northeast-2"
  # access_key = var.AWS_ACCESS_KEY_ID
  # secret_key = var.AWS_SECRET_ACCESS_KEY
  # profile = "devops"
}

###################################
# VPC 설정
###################################
resource "aws_vpc" "k8s-vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    "Name"                                      = "k8s-demo-vpc"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
  }
}

# VPC 에 생성될 Subnet
resource "aws_subnet" "k8s-subnet" {
  count                   = length(var.availability_zones)
  # count = 3
  vpc_id                  = aws_vpc.k8s-vpc.id
  cidr_block              = "10.0.${count.index * 10 + 1}.0/24"
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    "Name"                                      = "${var.availability_zones[count.index]}"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/elb" = 1
  }
}

# VPC 에 ingernet_gateway를 연결
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.k8s-vpc.id

  tags = {
    Name = "k8s-demo-gw"
  }
}


# 이렇게 생성하면 경로가 그대로 채택된다.
resource "aws_route_table" "local-route" {
  vpc_id = aws_vpc.k8s-vpc.id

  route {
    cidr_block = aws_vpc.k8s-vpc.cidr_block
    gateway_id = "local"
  }
}

# 모든 주소는 internet-gateway로 향한다.
resource "aws_route_table" "gw-route" {
	vpc_id = aws_vpc.k8s-vpc.id

	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.gw.id
	}
}

# 해당 부분 주석처리 - 왜 필요한가, 어떤 의미인가
# resource "aws_route_table_association" "rta" {
#   count = length(var.availability_zones)
#   route_table_id = aws_route_table.local-route.id
#   subnet_id = aws_subnet.k8s-subnet[count.index].id
# }

#######################################
# EKS용  IAM Role
#######################################
data "aws_iam_policy_document" "eks-assume-role-doc" {
  statement {
    effect = "Allow"

    principals {
      type        = "Service"
      identifiers = ["eks.amazonaws.com"]
    }

    actions = ["sts:AssumeRole"]
  }
}

resource "aws_iam_role" "eks-role" {
  name               = "k8s-demo-cluster-role"
  assume_role_policy = data.aws_iam_policy_document.eks-assume-role-doc.json
}

resource "aws_iam_role_policy_attachment" "cluster-AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.eks-role.name
}

resource "aws_iam_role_policy_attachment" "cluster_AmazonEKSServicePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role       = aws_iam_role.eks-role.name
}

# Optionally, enable Security Groups for Pods
# Reference: https://docs.aws.amazon.com/eks/latest/userguide/security-groups-for-pods.html
resource "aws_iam_role_policy_attachment" "cluster-AmazonEKSVPCResourceController" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"
  role       = aws_iam_role.eks-role.name
}
#######################################
# EKS용 Sg 설정
#######################################
resource "aws_security_group" "eks" {
	name = "k8s-demo-sg"
	description = "Cluster communication with worker nodes"
	vpc_id = aws_vpc.k8s-vpc.id

	# egress {
	# 	from_port = 0
	# 	to_port = 0
	# 	protocol = "-1"
	# 	cidr_blocks = ["0.0.0.0/0"]
	# }

    # ingress {
    #     from_port   = 0
    #     to_port     = 0
    #     protocol    = "-1"  # 모든 프로토콜
    #     self        = true  # 자기 자신의 보안 그룹
    # }
    tags = {
		Name = "k8s-demo-eks"
	}
	
}
#######################################
# EKS cluster 설정 
#######################################
resource "aws_eks_cluster" "k8s-demo-cluster" {
  name     = var.cluster_name
  role_arn = aws_iam_role.eks-role.arn

  vpc_config {
    security_group_ids      = [aws_security_group.eks.id]
    subnet_ids              = aws_subnet.k8s-subnet[*].id
    endpoint_public_access  = true
	  endpoint_private_access = true
  }

  # Ensure that IAM Role permissions are created before and deleted after EKS Cluster handling.
  # Otherwise, EKS will not be able to properly delete EKS managed EC2 infrastructure such as Security Groups.
  depends_on = [
    aws_iam_role_policy_attachment.cluster-AmazonEKSClusterPolicy,
    aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy,
    aws_iam_role_policy_attachment.cluster-AmazonEKSVPCResourceController,
  ]
}

# ############################################3##
# EKS Nodegrouup IAM Role
# 노드가 아래 권한이 있어야 노드로써 역할을 할수 있는것이다. 그러기위해 aws_auth 또한 필요함.
# ################################################
resource "aws_iam_role" "node-role" {
  name = "eks-node-group-role"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

resource "aws_iam_role_policy_attachment" "node-role-AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.node-role.name
}

resource "aws_iam_role_policy_attachment" "node-role-AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.node-role.name
}

resource "aws_iam_role_policy_attachment" "node-role-AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.node-role.name
}

##############################################################
# EKS Worker 노드 Launch Configuration에 들어갈 IAM Role profile
##############################################################
resource "aws_iam_instance_profile" "worker" {
	name = "k8s-demo-node-profile"
	role = aws_iam_role.node-role.name
}
#########################################
# EKS Woker sg
############################################
resource "aws_security_group" "worker" {
  name        = "kuberkuber-worker"
  description = "Security group for all nodes in the cluster"
  vpc_id      = aws_vpc.k8s-vpc.id



  # ingress {
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]  # 현재는 모든 소스 IP 주소에서 SSH 접속 허용
  #   description = "Allow SSH access from anywhere"
  # }

  tags = {
    "Name" = "k8s-demo-node"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  }
}

resource "aws_security_group_rule" "cluster_https_worker_ingress" {
  description              = "Allow pods to communicate with the EKS cluster API."
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks.id
  source_security_group_id = aws_security_group.worker.id
  from_port                = 443
  to_port                  = 443
  type                     = "ingress"
}

resource "aws_security_group_rule" "eks_cluster_ingress_node_https" {
  description              = "Allow pods running extension API servers on port 443 to receive communication from cluster control plane."
  protocol                 = "tcp"
  security_group_id        = aws_security_group.worker.id
  source_security_group_id = aws_security_group.eks.id
  from_port                = 443
  to_port                  = 443
  type                     = "ingress"
}

resource "aws_security_group_rule" "worker_egress_internet" {
  description       = "Allow nodes all egress to the Internet."
  protocol          = "-1"
  security_group_id = aws_security_group.worker.id
  cidr_blocks       = ["0.0.0.0/0"]
  from_port         = 0
  to_port           = 0
  type              = "egress"
}



resource "aws_security_group_rule" "workers_ingress_self" {
  description              = "Allow node to communicate with each other"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.worker.id
  source_security_group_id = aws_security_group.worker.id
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "worker_ingress_cluster" {
  description              = "Allow worker pods to receive communication from the cluster control plane."
  protocol                 = "tcp"
  security_group_id        = aws_security_group.worker.id
  source_security_group_id = aws_security_group.eks.id
  from_port                = 1025
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "worker_ingress_cluster_kubelet" {
  description              = "Allow worker Kubelets to receive communication from the cluster control plane."
  protocol                 = "tcp"
  security_group_id        = aws_security_group.worker.id
  source_security_group_id = aws_security_group.eks.id
  from_port                = 10250
  to_port                  = 10250
  type                     = "ingress"
}

############################################
# EKS LaunchConfiguration
############################################
data "aws_ami" "worker" {
  filter {
    name   = "name"
    values = ["amazon-eks-node-${aws_eks_cluster.k8s-demo-cluster.version}-v*"]
  }

  most_recent = true
  owners      = ["682935334295"]
}

locals {
  eks_worker_userdata = <<USERDATA
#!/bin/bash
set -ex
/etc/eks/bootstrap.sh '${var.cluster_name}' --b64-cluster-ca '${aws_eks_cluster.k8s-demo-cluster.certificate_authority.0.data}' --apiserver-endpoint '${aws_eks_cluster.k8s-demo-cluster.endpoint}' --container-runtime containerd --kubelet-extra-args ' --container-log-max-files=10 --container-log-max-size=100Mi --node-labels=node.kubernetes.io/instancegroup=application-test'
USERDATA
}

resource "aws_launch_configuration" "k8s-demo-ami" {
  name_prefix                 = "k8s-demo-example-"
  #image_id                   = data.aws_ami.worker.id
  image_id                    = "ami-07cc8400108193157"
  instance_type               = "t3.medium"
  iam_instance_profile        = aws_iam_instance_profile.worker.name
  security_groups             = [aws_security_group.worker.id]
  user_data_base64            = base64encode(local.eks_worker_userdata)
  key_name                    = "bastion_odark"
  associate_public_ip_address = true

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_autoscaling_group" "k8s-demo-asg" {
  name                 = "k8s-demo-asg-example"
  launch_configuration = aws_launch_configuration.k8s-demo-ami.name
  min_size             = 1
  max_size             = 3
  desired_capacity     = 3
  vpc_zone_identifier  = aws_subnet.k8s-subnet[*].id
  

  lifecycle {
    create_before_destroy = true
  }

  # (Optional) 스케일링 정책, 보안 그룹, 태그 등의 추가 설정 가능

  dynamic "tag" {
    for_each = var.extra_tags
    content {
      key                 = tag.value.key
      value               = tag.value.value
      propagate_at_launch = tag.value.propagate_at_launch
      
    }
    
  }
  tag {
    key                 = "aws-node-termination-handler/managed"
    value               = ""
    propagate_at_launch = true
  }
  
}

#########################################
# aws-auth 파일 특정 폴더에 생성
###########################################
# resource "local_file" "aws-auth" {
#   content  = data.template_file.aws-auth.rendered
#   filename = "${path.module}/.output/aws_auth.yaml"
# }

#########################################
# aws-auth 파일이용해 리소스 생성 - helm 폴더로 이동시켰다.
###########################################
# resource "kubectl_manifest" "clustersecert" {
#       yaml_body = data.template_file.aws-auth.rendered
# }

# data "local_file" "aws-auth-data" {
#   filename = "${path.module}/.output/aws_auth.yaml"
# }



################################################################################
# Route
# IGW로 전체 트래픽이 가도록 Default Routing Table CIDR 수정 및 명시적 서브넷 설정
# Default Routing table ID 획득
#################################################################################
locals {
  default_route_table_id = aws_vpc.k8s-vpc.default_route_table_id
}

resource "aws_route" "default-rt-to-igw" {
  route_table_id = local.default_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.gw.id
}

# 명시적 서브넷 설정
# resource "aws_route_table_association" "public-subnet" {
#   count = length(aws_subnet.k8s-subnet)
#   subnet_id = aws_subnet.k8s-subnet[count.index].id
#   route_table_id = local.default_route_table_id
# }

#############################################
# external-secrets 설치를 위한 설정
##############################################
data "aws_iam_policy_document" "external-secret-role-doc" {
  statement {
    effect = "Allow"
    actions = [
      "secretsmanager:GetResourcePolicy",
      "secretsmanager:GetSecretValue",
      "secretsmanager:DescribeSecret",
      "secretsmanager:ListSecretVersionIds"
    ]
    resources = ["arn:aws:secretsmanager:ap-northeast-2:*:secret:*"]
    
  }
}

resource "aws_iam_policy" "external-secret-policy" {
  name        = "external-secret-test"
  policy      = data.aws_iam_policy_document.external-secret-role-doc.json
}


locals {
  find_index  = "${length(regexall("/", aws_iam_openid_connect_provider.k8s-demo-oidc.arn)) > 0 ? index(split("", aws_iam_openid_connect_provider.k8s-demo-oidc.arn), "/") : -1}"
  oidc_substr = substr(aws_iam_openid_connect_provider.k8s-demo-oidc.arn, local.find_index + 1, -1)
}


resource "aws_iam_openid_connect_provider" "k8s-demo-oidc" {
  client_id_list     = ["sts.amazonaws.com"]
  thumbprint_list    = ["9e99a48a9960b14926bb7f3b02e22da2b0ab7280"]
  url                = aws_eks_cluster.k8s-demo-cluster.identity[0].oidc[0].issuer
}

resource "aws_iam_role" "external-secret-role" {
  name = "external-secret-test"

  assume_role_policy = jsonencode({
    Version    = "2012-10-17",
    Statement  = [
      {
        Action = "sts:AssumeRoleWithWebIdentity",
        Effect = "Allow",
        Principal = {
          Federated = aws_iam_openid_connect_provider.k8s-demo-oidc.arn
        },
        Condition = {
          StringEquals = {
              "${local.oidc_substr}:sub": "system:serviceaccount:external-secrets:aws-test-manager"
          }
        }
      }
    ]
  })

}

resource "aws_iam_role_policy_attachment" "external-secret-policy-attach" {
  role       = aws_iam_role.external-secret-role.name
  policy_arn = aws_iam_policy.external-secret-policy.arn
}
